<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhoneCall">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="339dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379">


        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            tools:ignore="Autofill, labelFor" />

        <EditText
            android:id="@+id/caller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caller"
            tools:ignore="Autofill, labelFor" />

        <EditText
            android:id="@+id/callee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/callee"
            tools:ignore="Autofill, labelFor" />

        <EditText
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start"
            tools:ignore="Autofill, labelFor" />

        <EditText
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end"
            tools:ignore="Autofill, labelFor" />

        <Button
            android:id="@+id/createCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CreateCall"
            android:text="@string/Create_Call" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>